objects/Account.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business_Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPM Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Champ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging Technologies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Copado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flosum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jitterbit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odaseva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gearset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssureClick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Snapshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dream factory – Cascade &amp; others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Bamboo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atlassian - Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Other_Competitors__c</fullName>
        <label>Other Competitors</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AutoRABIT_Pipeline</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.OWNERSHIP</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>bb,nroka,pd’so,vdatl</value>
        </filters>
        <label>AutoRABIT Pipeline</label>
        <sharedTo>
            <group>AutoRABIT_Sales_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BPM_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>PSK</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>BPM Services</value>
        </filters>
        <label>BPM Accounts</label>
        <sharedTo>
            <role>AutoRABIT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Primary_Email__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
</CustomObject>